fixed bug in warning z-index

--- a/src/components/Chat/ChatHeader.css
+++ b/src/components/Chat/ChatHeader.css
@@ -12,11 +12,11 @@
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 10;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index:21;
 }
 
 .members {
